@@ -28,6 +28,8 @@ Broker:
 - Fix any possible case where a json string might be incorrectly loaded. This
   could have caused a crash if a textname or textdescription field of a role was
   not a string, when loading the dynsec config from file only.
+- Dynsec plugin will not allow duplicate clients/groups/roles when loading
+  config from file, which matches the behaviour for when creating them.
 
 Client library:
 - Use CLOCK_BOOTTIME when available, to keep track of time. This solves the
